--- a/css/style.css
+++ b/css/style.css
@@ -549,9 +549,9 @@ background-color: var(--acсent-color);
 }
 
 .content-dis {
-	margin-top: 20px;
-	margin-left: 24px;
+	padding: 20px 24px;
 }
+
 .content-dis>h2{
 font-size: 18px;
 line-height: 2;
