--- a/css/main.css
+++ b/css/main.css
@@ -387,8 +387,9 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4))), url(../../img/hero.webp) 100% 100% no-repeat;
-  background: linear-gradient(rgba(47, 48, 58, 0.4)), url(../../img/hero.webp) 100% 100% no-repeat;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(33, 150, 243, 0.3))), url(../../img/hero.webp);
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)), url(../../img/hero.webp);
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
