--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,14 +4,16 @@
 	flex-direction: column;
 	justify-content: center;
 	
-		background: linear-gradient(rgba(47, 48, 58, 0.4)),
-		url(../../img/hero.webp) 100% 100% no-repeat  ;
+		background-image:
+		linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)),
+		url(../../img/hero.webp);
+		background-repeat: no-repeat;
 		background-size: cover ;
 		background-position: center;
 
 		@media screen and (min-width:1200px) {
 			height: 600px;
-		}
+		}	
 
 	&-title {
 			line-height: 1.62;
