--- a/css/main.css
+++ b/css/main.css
@@ -387,8 +387,8 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(33, 150, 243, 0.3))), url(../../img/hero.webp);
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)), url(../../img/hero.webp);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(33, 150, 243, 0.3))), url(../../img/hero.jpg);
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)), url(../../img/hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
