--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,9 +4,7 @@
 	flex-direction: column;
 	justify-content: center;
 	
-		background-image:
-		linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)),
-		url(../../img/hero.jpg);
+		background-image:linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)), url(../../img/hero.jpg);
 		background-repeat: no-repeat;
 		background-size: cover ;
 		background-position: center;
