--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,8 +4,8 @@
 	flex-direction: column;
 	justify-content: center;
 	
-		background-image:url(../../img/hero.jpg);
-		//linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3));
+		background-image:linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(33, 150, 243, 0.3)),
+		url(../img/hero.jpg);
 		background-repeat: no-repeat;
 		background-size: cover ;
 		background-position: center;
